--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo-google-fonts/poppins": "^0.4.1",
+    "@expo-google-fonts/public-sans": "^0.4.2",
     "@expo-google-fonts/rubik": "^0.4.2",
+    "@expo-google-fonts/source-sans-pro": "^0.2.3",
+    "@expo-google-fonts/source-serif-pro": "^0.2.3",
     "@expo/vector-icons": "^15.0.2",
     "@next/font": "^14.2.15",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "clsx": "^2.1.1",
-    "expo": "54.0.19",
+    "expo": "54.0.20",
+    "expo-checkbox": "~5.0.7",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.16",
     "expo-font": "~14.0.9",
