--- a/app.json
+++ b/app.json
@@ -1,56 +1,74 @@
 {
-  "expo": {
-    "name": "tenderly",
-    "slug": "tenderly",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "jsEngine": "hermes",
-    "icon": "./assets/images/icon.png",
-    "scheme": "tenderly",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
-      },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false,
-      "package": "com.hckerson.tenderly"
-    },
-    "web": {
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
-          "dark": {
-            "backgroundColor": "#000000"
-          }
+    "expo": {
+        "name": "tenderly",
+        "slug": "tenderly",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "jsEngine": "hermes",
+        "icon": "./assets/images/icon.png",
+        "scheme": "tenderly",
+        "userInterfaceStyle": "automatic",
+        "newArchEnabled": true,
+        "ios": {
+            "supportsTablet": true
+        },
+        "android": {
+            "adaptiveIcon": {
+                "backgroundColor": "#E6F4FE",
+                "foregroundImage": "./assets/images/android-icon-foreground.png",
+                "backgroundImage": "./assets/images/android-icon-background.png",
+                "monochromeImage": "./assets/images/android-icon-monochrome.png"
+            },
+            "edgeToEdgeEnabled": true,
+            "predictiveBackGestureEnabled": false,
+            "package": "com.hckerson.tenderly"
+        },
+        "web": {
+            "output": "static",
+            "favicon": "./assets/images/favicon.png"
+        },
+        "plugins": [
+            "expo-router",
+            [
+                "expo-splash-screen",
+                {
+                    "image": "./assets/images/splash-icon.png",
+                    "imageWidth": 200,
+                    "resizeMode": "contain",
+                    "backgroundColor": "#ffffff",
+                    "dark": {
+                        "backgroundColor": "#000000"
+                    }
+                }
+            ],
+            [
+                "expo-font",
+                {
+                    "fonts": [
+                        "node_modules/@expo-google-fonts/inter/800ExtraBold_Italic/Inter_800ExtraBold_Italic.ttf",
+                        "node_modules/@expo-google-fonts/rubik/500Medium_Italic/Rubik_500Medium_Italic.ttf",
+                        "node_modules/@expo-google-fonts/rubik/400Regular_Italic/Rubik_400Regular_Italic.ttf",
+                        "node_modules/@expo-google-fonts/poppins/400Regular_Italic/Poppins_400Regular_Italic.ttf",
+                        "node_modules/@expo-google-fonts/public-sans/400Regular_Italic/PublicSans_400Regular_Italic.ttf",
+                        "node_modules/@expo-google-fonts/public-sans/500Medium_Italic/PublicSans_500Medium_Italic.ttf",
+                        "node_modules/@expo-google-fonts/source-sans-pro/SourceSansPro_400Regular.ttf",
+                        "node_modules/@expo-google-fonts/public-sans/600SemiBold_Italic/PublicSans_600SemiBold_Italic.ttf",
+                        "node_modules/@expo-google-fonts/public-sans/700Bold_Italic/PublicSans_700Bold_Italic.ttf",
+                        "node_modules/@expo-google-fonts/source-sans-pro/SourceSansPro_600SemiBold.ttf",
+                        "node_modules/@expo-google-fonts/source-serif-pro/SourceSerifPro_400Regular.ttf"
+                    ]
+                }
+            ]
+        ],
+        "experiments": {
+            "typedRoutes": true,
+            "reactCompiler": true
+        },
+        "extra": {
+            "router": {},
+            "eas": {
+                "projectId": "3cd31f9b-7396-4af8-80bb-502fb7445975"
+            }
         }
-      ]
-    ],
-    "experiments": {
-      "typedRoutes": true,
-      "reactCompiler": true
-    },
-    "extra": {
-      "router": {},
-      "eas": {
-        "projectId": "3cd31f9b-7396-4af8-80bb-502fb7445975"
-      }
     }
-  }
 }
